@@ -11,6 +11,11 @@
 	* Makefile.am: modify invocation of TypeGenerator to pass template file
 	and pass --parentname=Hierarchy for all packages other than gtk.
 
+	* mk/common.mk: allow per-module HCFLAGS
+
+	* Makefile.am: c2hs builds without -fglasgow-exts except for the
+	Parsers and C2HSConfig modules.
+
 2004-12-12 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* gtk/gtk.pkg.in: change package_deps to haskell98 rather than base to
